[package]
name = "rwr-profile-server"
version = "0.11.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
actix-web = "4.0.1"
quick-xml = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-log = "0.1.2"
tracing-subscriber = "0.3.7"
tracing-appender = "0.2"
actix-files = "0.6.0"
actix-multipart = "0.4.0"
futures-util = "0.3.21"
futures = "0.3.21"
tokio = { version = "1.16.1", features = ["full"] }
